# lifetrack

./: .env.example  .gitignore  Caddyfile  INTEGRATION_SUMMARY.md  LICENSE  Makefile  PLAN_CALENDAR.md  README.md  architecture.md  copilot-instructions.md  docker-compose.yml  package-lock.json  package.json  progress.md  resume.html  run_tests.sh  setup-secure.sh
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  REMINDERS_FEATURE.md  entrypoint.sh  go.mod  go.sum  gqlgen.yml  migrate.sh
bot/: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
bot/archived_llm/: README.md  rebuild_rag_index.py
bot/archived_llm/docs/: RAG_FIX_APPLIED.md
bot/archived_llm/handlers/: message.py
bot/archived_llm/llm/: __init__.py  error_explainer.py  graphql_generator.py  model_loader.py  prompt_builder.py  rag_store.py  response_formatter_new.py  retry_strategy.py  template_helpers.py
bot/archived_llm/schemas/: response_templates_jinja.yaml
bot/archived_llm/schemas/prompts/: clarification_v1.yaml  error_recovery_v1.yaml  query_generation_v1.yaml
bot/archived_llm/tests/: test_formatter.py  test_prompts.py
bot/backend_client/: __init__.py  simple_client.py
bot/handlers/: __init__.py  callbacks.py  commands.py  file_handlers.py  message_handlers.py  notifications.py  ui_commands.py
bot/lifetrack_bot/: main.py  pyproject.toml
bot/schemas/: __init__.py  graphql_examples.yaml
bot/tests/: conftest.py  test_graphql_client.py  test_handlers.py  test_utils.py
lifetrack_front/: Dockerfile  (+5 more)
(+121 files in other folders)
